// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`a.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

=====================================output=====================================
// @flow

================================================================================
`;

exports[`b.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @flow
 * @providesModule b
 */
require('./a');

=====================================output=====================================
/**
 * @flow
 * @providesModule b
 */
require("./a");

================================================================================
`;

exports[`c.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./a.js');
require('b');

=====================================output=====================================
// @flow
require("./a.js");
require("b");

================================================================================
`;
